<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_margin="16dp"

    >


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >


        <View
            android:id="@+id/seperator2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_order_details_status" />

        <EditText
            android:id="@+id/fragment_order_details_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:baselineAligned="false"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="number"
            android:longClickable="false"
            android:singleLine="true"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/text1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/date_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/total_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seperator" />

        <View
            android:id="@+id/seperator"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_order_details_time" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/payer_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text3" />

        <EditText
            android:id="@+id/fragment_order_details_total"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="textPersonName"

            android:longClickable="false"
            app:layout_constraintStart_toEndOf="@+id/text3"
            app:layout_constraintTop_toBottomOf="@+id/seperator" />

        <com.mahozi.sayed.talabiya.Feature.ui.order.view.details.info.CustomEditText
            android:id="@+id/fragment_order_details_note"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/seperator2" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:text="@string/note_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_order_details_note" />

        <CheckBox
            android:id="@+id/fragment_order_details_status_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="28dp"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/fragment_order_details_status"
            app:layout_constraintTop_toBottomOf="@+id/fragment_order_details_payer" />

        <ImageButton
            android:id="@+id/receipt_image_button"
            android:layout_width="@dimen/thumbnail_width"
            android:layout_height="@dimen/thumbnail_height"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="4dp"
            android:background="@null"
            app:layout_constraintStart_toEndOf="@+id/fragment_order_details_total"
            app:layout_constraintTop_toBottomOf="@+id/seperator"
            app:srcCompat="@mipmap/attach_icon" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/time_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <EditText
            android:id="@+id/fragment_order_details_time"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="time"

            android:longClickable="false"
            app:layout_constraintStart_toEndOf="@+id/text2"
            app:layout_constraintTop_toBottomOf="@+id/fragment_order_details_date" />

        <EditText
            android:id="@+id/fragment_order_details_payer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="textPersonName"

            android:longClickable="false"
            app:layout_constraintStart_toEndOf="@+id/text4"
            app:layout_constraintTop_toBottomOf="@+id/fragment_order_details_total" />

        <TextView
            android:id="@+id/text5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/status_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text4" />

        <EditText
            android:id="@+id/fragment_order_details_status"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:inputType="textPersonName"

            android:longClickable="false"
            app:layout_constraintStart_toEndOf="@+id/text5"
            app:layout_constraintTop_toBottomOf="@+id/fragment_order_details_payer" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>